# binance-dex-rs

./: Cargo.toml  LICENSE  README.md
examples/: transaction.rs  ws.rs
src/: api_url.rs  client.rs  key_manager.rs  lib.rs  model.rs  util.rs
src/client/: transaction.rs  websocket.rs
src/key_manager/: keystore.rs
src/model/: fixed8.rs  query.rs  transaction.rs  websocket.rs
