[package]
name = "binance-dex-rs"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10"

chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }